--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,8 +33,8 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/Ngozi34/May-backend:latest
-            ghcr.io/Ngozi34/May-backend:${{ steps.vars.outputs.sha_short }}
+            ghcr.io/tinhtq/May-backend:latest
+            ghcr.io/tinhtq/May-backend:${{ steps.vars.outputs.sha_short }}
 
       - name: Build and push frontend
         uses: docker/build-push-action@v5
@@ -43,8 +43,8 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/Ngozi34/May-frontend:latest
-            ghcr.io/Ngozi34/May-frontend:${{ steps.vars.outputs.sha_short }}
+            ghcr.io/tinhtq/May-frontend:latest
+            ghcr.io/tinhtq/May-frontend:${{ steps.vars.outputs.sha_short }}
 
   deploy:
     needs: build
